--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  background: rgb(245, 253, 254);
+}
+.app {
+  background: #dbe3ff;
+  width: 550px;
+  min-height: 400px;
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 5px 5px 40px 0px rgba(0, 0, 0, 0.5);
+}
+
+h1 {
+  font-size: 42px;
+  text-align: center;
+  margin: 0;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 36px;
+  text-align: center;
+  margin: 0;
+  font-weight: 700;
+}
+
+.score {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+  align-items: center;
+  flex-direction: column;
+  font-size: 22px;
+}
+
+.quiz {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+}
+
+.question {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.question-count span {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.question-text {
+  font-size: 22px;
+  font-style: italic;
+  text-align: center;
+  font-weight: 400;
+}
+
+.answer {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+button {
+  font-size: 16px;
+  color: white;
+  background-color: rgb(195, 135, 251);
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid blueviolet;
+  outline: none;
+  font-weight: 400;
+}
+
+button:hover {
+  background: rgb(126, 74, 174);;
+  transition: all 0.2 ease-in-out;
+}
+
+.answer-text {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 5px;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+
+.answer-text-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
